﻿01/03/2016 0.10.0.0 - Beta
  Essentia terminal can fill/drain containers when they are dragged and clicked over an aspect.

01/02/2016 0.10.0.0 - Beta
  File restructure & code refactor.
  Added mult-mouse-button support to essentia terminal.
  Fixed ACT scroll bug issue with NEI.

01/01/2016 0.10.0.0 - Beta
  Essentia subsystem now supports craftable aspects.
  Essentia terminal now shows craftable essentia.
  Reworked some terrible GUI code.
  Fixed sort-by-name in the Essentia Terminal.
  Fixed a bug where some parts would not be aware of neighboring blocks when placed.
  Fixes #53: :D
  Todo: Lore, recipe, texture.

12/30/2015 0.10.0.0 - Beta
  Added Distillation Encoder
  Added pattern handler
  Implemented Distillation Encoder GUI
  Cleaned up tooltip code, and fixed underdraw issue.  

12/29/2015 0.10.0.0 - Beta
  Began integrating essentia into crafting system.
  Added "Essentia" item.

12/29/2015 0.9.1.2 - Beta
  Fixed #261 AE2-RV3-Beta-2 issue
  Added particle effects to Knowledge Inscriber.

12/28/2015 0.9.1.2 - Beta
  Complete network code overhaul.

12/28/2015 0.9.1.1 - Beta
  Added a lot of safety checks to arcane patterns.
  Updated name of storage components and cells to better match AE2's.
  Fixes #260 - Players preferred item is now used in arcane patterns.
  QOL: Essentia terminal aspects are now un-selectable.

12/27/2015 0.9.1.0 - Beta
  Fixes #112 - A.C.T can now issue crafting jobs!
  Fixes #230 - Arcane patterns now respect substitutions.
  Note: This change is NOT retro-active. Knowledge cores must have their patterns re-saved in order for the changes to take effect.

12/24/2015 0.9.0.4 - Alpha
  Dependency Updated: Forge 10.13.4.1558
  Dependency Updated: AE2-rv3-beta-1
  Merged pull request #255 - Keridos
  Merged pull request #252 - Aquahatsche
  Fixed #255 TODO's
  Fixes #228 - Corrected blacklisting code
  Fixes compatibility with Thaumic Tinkerer.